--- a/app/src/main/res/layout/layout_yogiyo_bottom_navigation.xml
+++ b/app/src/main/res/layout/layout_yogiyo_bottom_navigation.xml
@@ -15,6 +15,7 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/cwek"
         tools:srcCompat="@drawable/cwek"/>
 
     <ImageView
@@ -25,6 +26,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
+        android:src="@drawable/msgs"
         tools:srcCompat="@drawable/msgs" />
 
     <ImageView
@@ -35,6 +37,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
+        android:src="@drawable/plus"
         tools:srcCompat="@drawable/plus" />
 
     <ImageView
@@ -45,6 +48,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
+        android:src="@drawable/set"
         tools:srcCompat="@drawable/set" />
 
     <TextView
