--- a/app/src/main/res/layout/activity_project2.xml
+++ b/app/src/main/res/layout/activity_project2.xml
@@ -17,7 +17,8 @@
 
     <RelativeLayout
         android:id="@+id/all"
-        android:layout_width="match_parent"
+        android:layout_width="m
+        atch_parent"
         android:layout_height="match_parent">
 
         <Button
@@ -30,71 +31,7 @@
             android:hint="Search your Destinaton" />
 
 
-        <ImageButton
-            android:id="@+id/resto"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/src1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="60dp"
-            app:srcCompat="@drawable/resto"/>
 
-        <TextView
-            android:id="@+id/txt_resto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/resto"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="35dp"
-            android:textColor="#000"
-            android:textSize="15dp"
-            android:fontFamily="@font/bubblegum_sans"
-            android:text="Restaurant" />
-
-        <ImageView
-            android:id="@+id/img_hotel"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/src1"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="60dp"
-            app:srcCompat="@drawable/hotel" />
-
-        <ImageView
-            android:id="@+id/img_amust"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/src1"
-            android:layout_marginLeft="280dp"
-            android:layout_marginTop="60dp"
-            app:srcCompat="@drawable/amus" />
-
-        <ImageView
-            android:id="@+id/img_bus"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/resto"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/bus" />
-
-        <ImageView
-            android:id="@+id/img_rute"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/img_hotel"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/rute" />
-
-        <ImageView
-            android:id="@+id/img_loc"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_below="@+id/img_amust"
-            android:layout_marginLeft="280dp"
-            android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/loc" />
 
         <TextView
             android:id="@+id/txt_open"
@@ -132,6 +69,81 @@
             android:textColor="#000"
             android:text="Welcome to Jakarta"/>
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/imageButton8"
+                android:layout_width="109dp"
+                android:layout_height="91dp"
+                tools:layout_editor_absoluteX="231dp"
+                tools:layout_editor_absoluteY="83dp"
+                tools:srcCompat="@tools:sample/avatars[0]" />
+
+            <ImageButton
+                android:id="@+id/imageButton9"
+                android:layout_width="117dp"
+                android:layout_height="108dp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="232dp"
+                tools:srcCompat="@tools:sample/avatars[5]" />
+
+            <ImageButton
+                android:id="@+id/imageButton10"
+                android:layout_width="107dp"
+                android:layout_height="106dp"
+                tools:layout_editor_absoluteX="231dp"
+                tools:layout_editor_absoluteY="232dp"
+                tools:srcCompat="@tools:sample/avatars[14]"/>
+
+            <ImageButton
+                android:id="@+id/imageButton11"
+                android:layout_width="125dp"
+                android:layout_height="100dp"
+                tools:layout_editor_absoluteX="30dp"
+                tools:layout_editor_absoluteY="83dp"
+                tools:srcCompat="@tools:sample/avatars[12]"/>
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/imageButton11"
+                app:layout_constraintHorizontal_bias="0.318"
+                app:layout_constraintStart_toStartOf="@+id/imageButton11"
+                tools:layout_editor_absoluteY="193dp"/>
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/imageButton8"
+                app:layout_constraintStart_toStartOf="@+id/imageButton8"
+                tools:layout_editor_absoluteY="183dp" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="66dp"
+                android:layout_height="12dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/imageButton9"
+                app:layout_constraintHorizontal_bias="0.549"
+                app:layout_constraintStart_toStartOf="@+id/imageButton9"
+                tools:layout_editor_absoluteY="350dp" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/imageButton10"
+                app:layout_constraintHorizontal_bias="0.52"
+                app:layout_constraintStart_toStartOf="@+id/imageButton10"
+                tools:layout_editor_absoluteY="343dp" />
+        </android.support.constraint.ConstraintLayout>
 
 
     </RelativeLayout>
