--- a/app/src/main/res/layout/activity_project2.xml
+++ b/app/src/main/res/layout/activity_project2.xml
@@ -17,8 +17,7 @@
 
     <RelativeLayout
         android:id="@+id/all"
-        android:layout_width="m
-        atch_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <Button
@@ -143,6 +142,15 @@
                 app:layout_constraintHorizontal_bias="0.52"
                 app:layout_constraintStart_toStartOf="@+id/imageButton10"
                 tools:layout_editor_absoluteY="343dp" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="goTestPage"
+                android:onClick="goTestPage"
+                tools:layout_editor_absoluteX="167dp"
+                tools:layout_editor_absoluteY="403dp" />
         </android.support.constraint.ConstraintLayout>
 
 
